--- a/SchoolManagementSystem/src/main/webapp/WEB-INF/web.xml
+++ b/SchoolManagementSystem/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,17 @@
     <url-pattern>/publishNotice</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <servlet-name>Teacher</servlet-name>
+    <servlet-class>com.school.Control.TeacherDashBoardServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+  <servlet-name>Teacher</servlet-name>
+    <url-pattern>/TeacherDashBoardServlet</url-pattern>
+  </servlet-mapping>
+  
+  
  
   
 
